--- a/about.html
+++ b/about.html
@@ -4,14 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About</title>
 </head>
 <body>
     <h1>About</h1>
 
-    <img src="images/duck-animate-3-500x500.png" alt="Headshot">
+    <img src="images/duck-animate-3-500x500.png" alt="Headshot" width = 350>
 
-    <p>Pellentesque semper nec nibh at pharetra. Phasellus ultrices lacus ac augue sollicitudin, in efficitur magna ornare. In hac habitasse platea dictumst. Sed varius, orci id dignissim tristique, purus sem malesuada velit, a volutpat nunc lorem vitae lacus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum congue urna nec auctor posuere. Aenean dictum diam sit amet odio malesuada consectetur.</p>
+    <p>Aegrotus sum. . . . Malevolus sum. Invenustus homo. Ego
+        putes iecur meum laedere. Sed plane non refert
+        de morbo meo. Nescio quidem quid dolet. Non sum
+        in curatione numquam fui, quamvis et medicinam veneror
+        et doctorum. Praeterea, superstitiosus sum in extremo; bene, at
+        minimum quantum ad medicinam. (Satis sum
+        eruditus non superstitiosus, sed sum.) Non, domine, videre recuso
+        medico simpliciter de omnibus. Nunc, id est aliquid quam
+        verisimile non intelleget. Bene, intelligo. Nempe I
+        non potero vobis exponere, cui noceam. Scio me certissime
+        non dando doctores "sordidum multum" non quaerendo curationem. E go
+        melius scito quam quisquam quod mihi per hoc nocebit , et non
+        alius alius. Et tamen, si medelam non quaero, frustra est. My
+        iecur dolet? Bonum, doleat magis!</p>
 
     <a href="index.html">Home</a>
     <a href="menu.html">Menu</a>
