Add photo to homepage

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1>Odin Blog</h1>
     <a href="menu.html">Menu</a>
     <a href="about.html">About</a>
+
+    <img src="images/Untitled.png" alt="Logo" width = 350>
 </body>
 </html>
