--- a/about.html
+++ b/about.html
@@ -11,20 +11,7 @@
 
     <img src="images/duck-animate-3-500x500.png" alt="Headshot" width = 350>
 
-    <p>Aegrotus sum. . . . Malevolus sum. Invenustus homo. Ego
-        putes iecur meum laedere. Sed plane non refert
-        de morbo meo. Nescio quidem quid dolet. Non sum
-        in curatione numquam fui, quamvis et medicinam veneror
-        et doctorum. Praeterea, superstitiosus sum in extremo; bene, at
-        minimum quantum ad medicinam. (Satis sum
-        eruditus non superstitiosus, sed sum.) Non, domine, videre recuso
-        medico simpliciter de omnibus. Nunc, id est aliquid quam
-        verisimile non intelleget. Bene, intelligo. Nempe I
-        non potero vobis exponere, cui noceam. Scio me certissime
-        non dando doctores "sordidum multum" non quaerendo curationem. E go
-        melius scito quam quisquam quod mihi per hoc nocebit , et non
-        alius alius. Et tamen, si medelam non quaero, frustra est. My
-        iecur dolet? Bonum, doleat magis!</p>
+    <p>Perspicuum est mihi nunc, quod pro mea immensa vanitate et princeps vexillum pro me ipse proposui, me sæpe respexi apud furorem odii, quod vergebat ad fastidium, et sic intus omnibus idem tribuebam.</p>
 
     <a href="index.html">Home</a>
     <a href="menu.html">Menu</a>
